add_executable(grammer_test grammer_test.cpp)
add_executable(2d_find 001_2d_find.cpp)
add_executable(stringreplace stringreplace.cpp)
add_executable(link_node link_node.cpp)
add_executable(shared shared_ptr_test.cpp)
add_executable(introsort introsort.cpp)
add_executable(fibonacci fibonacci.cpp)
add_executable(binary_tree_exe binary_tree.cpp)
add_executable(pow pow.cpp)
add_executable(print1toN print1_to_n.cpp)
add_executable(odd_1st odd_1st_even_2nd.cpp)
add_executable(last_k last_k_th.cpp)
add_executable(31valid_stack_sequence valid_stack_sequence.cpp)
add_executable(33valid_posorder_sequence 33_valid_posorder_sequence.cpp)
add_executable(34path-sum-ii 34path-sum-ii.cpp)
add_executable(numWays numWays.cpp)
add_executable(maximum-subarray maximum-subarray.cpp)
add_executable(unzipString unzipString.cpp)
add_executable(thread_test thread_test.cpp)
add_executable(uglynumber uglynumber.cpp)
add_executable(FirtNotRepeatingChar FirtNotRepeatingChar.cpp)
add_executable(find-first-and-last-position-of-element-in-sorted-array find-first-and-last-position-of-element-in-sorted-array.cpp)
add_executable(0ton-1 0ton-1.cpp)
add_executable(sum_of_two_num_to_s sum_of_two_num_to_s.cpp)
add_executable(reverse-words-in-a-string reverse-words-in-a-string.cpp)
add_executable(knapsack_problem_0-1_problem knapsack_problem_0-1_problem.cpp)
add_executable(coinChange coinChange.cpp)
add_executable(coinChange_better coinChange_better.cpp)
add_executable(levelOrder levelOrder.cpp)
add_executable(threeStepsProblem threeStepsProblem.cpp)
add_executable(climbingStairs climbingStairs.cpp)
add_executable(spiralOrder spiralOrder.cpp)
add_executable(poker_is_straight poker_is_straight.cpp)
add_executable(dice_twoSum dice_twoSum.cpp)
add_executable(findContinuousSequence findContinuousSequence.cpp)
add_executable(maxValue maxValue.hpp)
target_link_libraries(binary_tree_exe
        PRIVATE
        binary_tree_library
        )